--- a/sketch-toolbar-item-demo.sketchplugin/Contents/Resources/_webpack_resources/SketchToolbarIcon.framework/Resources/Info.plist
+++ b/sketch-toolbar-item-demo.sketchplugin/Contents/Resources/_webpack_resources/SketchToolbarIcon.framework/Resources/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>18F132</string>
+	<string>19C57</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
@@ -23,21 +23,23 @@
 		<string>MacOSX</string>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>114</string>
+	<string>115</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>10E1001</string>
+	<string>11E146</string>
 	<key>DTPlatformVersion</key>
 	<string>GM</string>
 	<key>DTSDKBuild</key>
-	<string>18E219</string>
+	<string>19E258</string>
 	<key>DTSDKName</key>
-	<string>macosx10.14</string>
+	<string>macosx10.15</string>
 	<key>DTXcode</key>
-	<string>1020</string>
+	<string>1140</string>
 	<key>DTXcodeBuild</key>
-	<string>10E1001</string>
+	<string>11E146</string>
+	<key>LSMinimumSystemVersion</key>
+	<string>10.14</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2019 Aby Nimbalkar. All rights reserved.</string>
 </dict>
